--- a/cart1.html
+++ b/cart1.html
@@ -46,205 +46,120 @@
             </div>
         </div>
     </nav>
+    <br>
+    <br>
 
-
-<header class="container-fluid bg-dark position-sticky top-0"></header>
-
-<ul class="nav nav-pills mb-3 py-3  container" id="pills-tab" role="tablist">
-
-    <li class="nav-item" role="presentation">
-        <a class="nav-link  active" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile"
-            type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Productos</a>
-    </li>
-    <li class="nav-item" role="presentation">
-        <a class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button"
-            role="tab" aria-controls="pills-contact" aria-selected="false">Carrito</a>
-    </li>
-</ul>
-
-<!--Alerta para añadir Prod. al carrito-->
-<div class="alert container position-sticky top-0 alert-primary  hide" role="alert">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi flex-shrink-0 me-2"
-        viewBox="0 0 16 16" role="img" aria-label="Success:">
-        <path
-            d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z" />
-    </svg>
-    Producto añadido al carrito!
-</div>
-<div class="alert container position-sticky top-0 alert-danger remove" role="alert">
-    Producto removido!
-</div>
-
-<div class="tab-content" id="pills-tabContent">
-    <div class="tab-pane fade " id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">1</div>
-    <div class="tab-pane fade show active  container" id="pills-profile" role="tabpanel"
-        aria-labelledby="pills-profile-tab">
-
-        <h2 class="h4 m-4 text-primary">No oficial, estoy trabajando en esto todavía...</h2>
-
-        <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4">
-            <div class="col d-flex justify-content-center mb-4">
-                <div class="card shadow mb-1 bg-dark rounded" style="width: 20rem;">
-                    <h5 class="card-title pt-2 text-center text-primary">peugeot 208 /2021</h5>
-                    <img src="/img/prod4.jpg" class="card-img-top" alt=" ">
-                    <div class="card-body ">
-                        <p class="card-text text-white-50 description">"El modelo de auto que se sigue renovando y
-                            manteniendo su
-                            prestigio en comodidad."</p>
-                        <h5 class="text-primary">Precio: <span class="precio">USD 15.200</span></h5>
-                        <div class="d-grid gap-2">
-                            <button class="btn btn-primary button">Me lo llevo!</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col d-flex justify-content-center mb-4">
-                <div class="card shadow mb-1 bg-dark rounded" style="width: 20rem;">
-                    <h5 class="card-title pt-2 text-center text-primary">Pino de olor para el auto</h5>
-                    <img src="/img/tree1.jpg" class="card-img-top" alt="#" width="100%">
-                    <div class="card-body ">
-                        <p class="card-text text-white-50 description">"El modelo de auto que se sigue renovando y
-                            manteniendo su
-                            prestigio en comodidad."</p>
-                        <h5 class="text-primary">Precio: <span class="precio">UYU 100</span></h5>
-                        <div class="d-grid gap-2">
-                            <button class="btn btn-primary button">Me lo llevo!</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col d-flex justify-content-center mb-4">
-                <div class="card shadow mb-1 bg-dark rounded" style="width: 20rem;">
-                    <h5 class="card-title pt-2 text-center text-primary">Iphone 12 pro max</h5>
-                    <img src="/img/cat9.jpg" class="card-img-top" alt=" ">
-                    <div class="card-body ">
-                        <p class="card-text text-white-50 description">"El modelo de auto que se sigue renovando y
-                            manteniendo su
-                            prestigio en comodidad."</p>
-                        <h5 class="text-primary">Precio: <span class="precio">USD 3.200</span></h5>
-                        <div class="d-grid gap-2">
-                            <button class="btn btn-primary button">Me lo llevo!</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col d-flex justify-content-center mb-4">
-                <div class="card shadow mb-1 bg-dark rounded" style="width: 20rem;">
-                    <h5 class="card-title pt-2 text-center text-primary">Subaru forester / 2021</h5>
-                    <img src="/img/car3.jpg" class="card-img-top" alt=" ">
-                    <div class="card-body ">
-                        <p class="card-text text-white-50 description">"El modelo de auto que se sigue renovando y
-                            manteniendo su
-                            prestigio en comodidad."</p>
-                        <h5 class="text-primary">Precio: <span class="precio">USD 45.200</span></h5>
-                        <div class="d-grid gap-2">
-                            <button class="btn btn-primary button">Me lo llevo!</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col d-flex justify-content-center mb-4">
-                <div class="card shadow mb-1 bg-dark rounded" style="width: 20rem;">
-                    <h5 class="card-title pt-2 text-center text-primary">Card Products 4!</h5>
-                    <img src="/img/cat7.jpg" class="card-img-top" alt=" ">
-                    <div class="card-body ">
-                        <p class="card-text text-white-50 description">"El modelo de auto que se sigue renovando y
-                            manteniendo su
-                            prestigio en comodidad."</p>
-                        <h5 class="text-primary">Precio: <span class="precio">USD 15.200</span></h5>
-                        <div class="d-grid gap-2">
-                            <button class="btn btn-primary button">Me lo llevo!</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col d-flex justify-content-center mb-4">
-                <div class="card shadow mb-1 bg-dark rounded" style="width: 20rem;">
-                    <h5 class="card-title pt-2 text-center text-primary">Card Products 5</h5>
-                    <img src="/img/cat6.jpg" class="card-img-top" alt=" ">
-                    <div class="card-body ">
-                        <p class="card-text text-white-50 description">"El modelo de auto que se sigue renovando y
-                            manteniendo su
-                            prestigio en comodidad."</p>
-                        <h5 class="text-primary">Precio: <span class="precio">USD 15.200</span></h5>
-                        <div class="d-grid gap-2">
-                            <button class="btn btn-primary button">Me lo llevo!</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-    </div>
-
-
-    <div class="tab-pane fade carrito" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
-
-        <br>
+    <div class="carrito">
         <table class="table table-dark table-striped">
             <thead>
-                <tr class="text-primary">
+                <tr>
                     <th scope="col">#</th>
-                    <th scope="col">Productos</th>
+                    <th scope="col">Producto</th>
                     <th scope="col">Precio</th>
                     <th scope="col">Cantidad</th>
+                    <th scope="col"><i class="far fa-credit-card"></i></th>
                 </tr>
             </thead>
-
-            <!--La class "tbody" la voy a obtener como variable global en el JavaScrip (en líne 9)-->
-            <tbody class="tbody">
-
+    
+            <tbody>
+                <tr id="poraca">
+                    <th scope="row">1</th>
+                    <td class="table__productos">
+                        <img src="/img/tree1.jpg" alt="#">
+                        <h6 class="Title">Title</h6>
+                    </td>
+                    <td class="table__precio">
+                        <p>UYU 100</p>
+                    </td>
+                    <td class="table__cantidad"><input type="number" min="1" value="2">
+                        <button class="delete btn btn-danger">x</button>
+                    </td>
+                    <td class="row-cols-md-2">
+                        <button class="btn btn-success">COMPRAR</button>
+                    </td>
+                </tr>
             </tbody>
         </table>
-        <br><br>
-        <div class="row mx-4">
-            <div class="col">
-                <h3 class="itemCartTotal">Total: 0</h3>
-            </div>
-            <div class="col d-flex justify-content-end">
-                <button class="btn btn-success">COMPRAR</button>
-            </div>
+    </div>
+
+    <div class="carrito">
+        <table class="table table-dark table-striped">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Producto</th>
+                    <th scope="col">Precio</th>
+                    <th scope="col">Cantidad</th>
+                    <th scope="col"><i class="far fa-credit-card"></i></th>
+                </tr>
+            </thead>
+    
+            <tbody>
+                <tr id="poraca">
+                    <th scope="row">1</th>
+                    <td class="table__productos">
+                        <img src="/img/tree1.jpg" alt="#">
+                        <h6 class="Title">Title</h6>
+                    </td>
+                    <td class="table__precio">
+                        <p>UYU 100</p>
+                    </td>
+                    <td class="table__cantidad"><input type="number" min="1" value="2">
+                        <button class="delete btn btn-danger">x</button>
+                    </td>
+                    <td class="row-cols-md-2">
+                        <button class="btn btn-success">COMPRAR</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="row text-center" id="carrito">
+        <hr class="my-3">
+        <h1>Carrito Prueba</h1>
+        <h6></h6>
+        <div  id="imagen">
         </div>
-
-    </div>
-</div>
-
-<footer class="bg-dark p-3 mt-5">
-    <p class="text-center mg-o text-muted"> eMercado - Todo lo que busques está aquí </p>
-</footer>
-
-<div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-        <h4 class="alert-heading">¡A trabajar! :)</h4>
-        <p>Esta sección corresponde a: Entrega 5 (Fecha de entrega: 17/10/2021) y Entrega 7 (Fecha de entrega:
-            14/11/2021).</p>
         <hr>
-        <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
     </div>
-</div>
-<div id="spinner-wrapper">
-    <div class="lds-ring">
+   
+    <footer class="bg-dark p-3 mt-5">
+        <p class="text-center mg-o text-muted"> eMercado - Todo lo que busques está aquí </p>
+    </footer>
 
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+    <div class="container p-5">
+        <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
+            <h4 class="alert-heading">¡A trabajar! :)</h4>
+            <p>Esta sección corresponde a: Entrega 5 (Fecha de entrega: 17/10/2021) y Entrega 7 (Fecha de entrega:
+                14/11/2021).</p>
+            <hr>
+            <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.
+            </p>
+        </div>
     </div>
-</div>
+    <div id="spinner-wrapper">
+        <div class="lds-ring">
+
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
 
 
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-    crossorigin="anonymous"></script>
-<script src="js/login.js"></script>
-<script src="js/jquery-3.4.1.min.js"></script>
-<script src="js/bootstrap.bundle.min.js"></script>
-<script src="js/dropzone.js"></script>
-<script src="js/init.js"></script>
-<script src="js/cart1.js"></script>
-<script src="js/cerrar.js"></script>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+        crossorigin="anonymous"></script>
+    <script src="js/login.js"></script>
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/dropzone.js"></script>
+    <script src="js/init.js"></script>
+    <script src="js/car1.js"></script>
+    <script src="js/cerrar.js"></script>
 </body>
 
 </html>
