--- a/my-profile.html
+++ b/my-profile.html
@@ -11,24 +11,7 @@
 
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-
-  <style>
-    .bd-placeholder-img {
-      font-size: 1.125rem;
-      text-anchor: middle;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
-
-    @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-      }
-    }
-  </style>
+  <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
   <link href="css/dropzone.css" rel="stylesheet">
@@ -42,7 +25,7 @@
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v12.0"
       nonce="8wEHU41i"></script>
     <div class="container d-flex flex-column flex-md-row justify-content-between">
-            <a class="py-2 d-none d-md-inline-block" href="#"></a>
+      <a class="py-2 d-none d-md-inline-block" href="#"></a>
       <a class="py-2 d-none d-md-inline-block" href="home.html">Inicio</a>
       <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
@@ -58,9 +41,10 @@
           <a class="dropdown-item" href="#" onclick="signOut();">Cerrar sesión<i class="fas fa-sign-out-alt"></i></a>
         </div>
       </div>
-        <div id="icon-menu">
-          <a class="dropdown-item" href="cart.html"><i class="fas fa-cart-plus"></i></a>
-        </div>
+      <!-- Icono Carrito -->
+      <div id="icon-menu">
+        <a class="dropdown-item" href="cart.html"><i class="fas fa-cart-plus"></i></a>
+      </div>
     </div>
   </nav>
   <section class="jumbotron text-center">
@@ -72,7 +56,8 @@
         <div class="card" id="mi-Prefil">
           <p>Solo probando ...</p>
           <a href="https://github.com/AlvaroDiploide/proyecto-E-M"><i class="fa fa-github"></i></a>
-          <a href="https://www.linkedin.com/learning/paths/conviertete-en-especialista-en-administracion-de-redes"><i class="fa fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/learning/paths/conviertete-en-especialista-en-administracion-de-redes"><i
+              class="fa fa-linkedin"></i></a>
           <p><button>Contact</button></p>
         </div>
       </div>
