--- a/JapFase1/product-info.html
+++ b/JapFase1/product-info.html
@@ -8,6 +8,14 @@
   <meta name="description" content="">
   <title>eMercado - Todo lo que busques está aquí</title>
   <script src="js/login.js"></script>
+
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+    crossorigin="anonymous"></script>
+
+
+  <!-- CSS only -->
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -24,20 +32,22 @@
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
 
+      <!--Menú despegable con Boostrap-->
       <div class="dropdown">
         <a class="btn btn-secondary dropdown-toggle prueba" role="button" id="entrada" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false" class="py-2 d-none d-md-inline-block" href="my-profile.html"
           id="entrada"></a>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
           <a class="dropdown-item" href="my-profile.html">Mi perfil<i class="fas fa-street-view"></i></a>
-          <a class="dropdown-item" href="cart.html">Mi carrito<i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
           <a class="dropdown-item" href="#" onclick="signOut();">Cerrar sesión<i class="fas fa-sign-out-alt"></i></a>
         </div>
       </div>
-      <div id="fb-root"></div>
-      <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v12.0"
-        nonce="8wEHU41i"></script>
+      <!-- Icono Carrito -->
+      <div id="icon-menu">
+        <a class="dropdown-item" href="cart.html"><i class="fas fa-cart-plus"></i></a>
+      </div>
     </div>
+
   </nav>
   <main role="main">
     <div class="container mt-5">
@@ -48,7 +58,7 @@
           seleccionada previamente, siempre se visualizará la presente: <strong>Autos</strong>.</p>
       </div>
 
-      <h3 id="categoryName"></h3>
+      <h3 id="categoryName" style="  text-align: center!important;"></h3>
       <hr class="my-3">
       <dl>
         <dt id="perro">Descripción</dt>
@@ -77,7 +87,10 @@
 
         <dt id="perro">Imágenes ilustrativas</dt>
         <dd>
-          <div class="row text-center text-lg-left pt-2" id="productImagesGallery">
+          <!-- Carrusel hecho con Boostrap-->
+          <div id="carouselExampleControls" class="carousel  carousel-dark " data-bs-ride="carousel">
+            <div class="carousel-inner" id="productImagesGallery">
+            </div>
           </div>
         </dd>
         <hr>
@@ -111,8 +124,6 @@
                 <button class="btn btn-primary" type="submit">Comentar</button>
               </form>
             </div>
-
-
           </div>
         </div>
 
@@ -120,49 +131,22 @@
           <div id="datos"></div>
         </dd>
 
-        <dt>Productos Relacionados</dt>
+        <dt id="perro">Productos Relacionados</dt>
         <dd>
-          <p id="relatedtCriteria"></p>
+          <p id="relatedtCriteria" style="  text-align: center!important;"></p>
         </dd>
       </dl>
     </div>
-
-
-    <a type="button" class="btn btn-light btn-lg btn-block" href="products.html">Ver productos</a>
+    <a type="button" class="btn btn-light btn-lg btn-block" href="products.html">Volver a productos</a>
   </main>
-  <div>
-  </div>
-  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="img/prod1_1.jpg" alt="First slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="img/prod1_2.jpg" alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="img/prod1_3.jpg" alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="img/prod1_4.jpg" alt="Third slide">
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
+
   <footer class="text-muted">
     <div class="container">
       <p class="float-right">
         <a href="#">Volver arriba</a>
       </p>
-      <p>Este sitio forma parte de Desarrollo Web - JAP - 2020</p>
-      <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
+      <p class="text-center">Este sitio forma parte de Desarrollo Web - JAP - 2020. Clickea <a target="_blank"
+          href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
     </div>
     <hr>
     <div class="fb-comments" data-href="https://github.com/AlvaroDiploide/proyecto-E-M" data-width="800"
@@ -176,7 +160,6 @@
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
-  <script src="js/product-info.js"></script>
   <script src="js/cerrar.js"></script>
   <script src="js/product-info.js"></script>
 </body>
