--- a/my-profile.html
+++ b/my-profile.html
@@ -70,9 +70,9 @@
         <p>Este sitio forma parte de Desarrollo Web - JAP - 2020</p>
         <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
         <!--Plugins de Facebook para comentarios-->
-        <div class="fb-comments" data-href="https://github.com/AlvaroDiploide/proyecto-E-M" data-width="800"
+        <!--<div class="fb-comments" data-href="https://github.com/AlvaroDiploide/proyecto-E-M" data-width="800"
           data-numposts="6">
-        </div>
+        </div>-->
       </div>
     </footer>
   </section>
