--- a/cart.html
+++ b/cart.html
@@ -6,10 +6,6 @@
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- JavaScript Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-    crossorigin="anonymous"></script>
   <meta name="description" content="">
   <title>eMercado - Todo lo que busques está aquí</title>
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
@@ -52,6 +48,19 @@
   <br>
   <br>
 
+  <!--Alerta para añadir Prod. al carrito-->
+  <div class="alert container position-sticky top-0 alert-primary  hide" role="alert">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi flex-shrink-0 me-2"
+      viewBox="0 0 16 16" role="img" aria-label="Success:">
+      <path
+        d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z" />
+    </svg>
+    Producto añadido al carrito!
+  </div>
+  <div class="alert container position-sticky top-0 alert-danger remove" role="alert">
+    Producto removido!
+  </div>
+
   <div class="carrito">
     <table class="table table-dark table-striped">
       <thead>
@@ -60,37 +69,18 @@
           <th scope="col">Producto</th>
           <th scope="col">Precio</th>
           <th scope="col">Cantidad</th>
+          <th scope="col">Sub-total</th>
+          <th scope="col">IVA</th>
+          <th scope="col">Total</th>
           <th scope="col"><i class="far fa-credit-card"></i></th>
         </tr>
       </thead>
-
-      <tbody>
-        <tr id="poraca">
-          <th scope="row">1</th>
-          <td class="table__productos">
-            <img src="/img/tree1.jpg" alt="#">
-            <h6 class="Title">Title</h6>
-          </td>
-          <td class="table__precio">
-            <p>UYU 100</p>
-          </td>
-          <td class="table__cantidad"><input type="number" min="1" value="2">
-            <button class="delete btn btn-danger">x</button>
-          </td>
-          <td class="row-cols-md-2">
-            <button class="btn btn-success">COMPRAR</button>
-          </td>
-        </tr>
+      <tbody id="carrito">
       </tbody>
     </table>
+
   </div>
 
-  <br><br>
-  <div class="row mx-4">
-    <div class="col">
-      <h3 class="itemCartTotal">Total: UYU 100</h3>
-    </div>
-  </div>
 
   <footer class="bg-dark p-3 mt-5">
     <p class="text-center mg-o text-muted"> eMercado - Todo lo que busques está aquí </p>
@@ -102,11 +92,17 @@
       <p>Esta sección corresponde a: Entrega 5 (Fecha de entrega: 17/10/2021) y Entrega 7 (Fecha de entrega:
         14/11/2021).</p>
       <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
+      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.
+      </p>
     </div>
   </div>
   <div id="spinner-wrapper">
     <div class="lds-ring">
+
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
     </div>
   </div>
 
