--- a/guardar.html
+++ b/guardar.html
@@ -9,11 +9,12 @@
     <meta name="description" content="">
     <title>eMercado - Todo lo que busques está aquí</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
+    
+
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/dropzone.css" rel="stylesheet">
@@ -85,7 +86,7 @@
 
         <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4">
             <div class="col d-flex justify-content-center mb-4">
-                <div class="card shadow mb-1 bg-dark rounded" style="width: 20rem;">
+                <div class="card shadow mb-2 bg-dark rounded" style="width: 20rem;">
                     <h5 class="card-title pt-2 text-center text-primary">peugeot 208 /2021</h5>
                     <img src="/img/prod4.jpg" class="card-img-top" alt=" ">
                     <div class="card-body ">
