--- a/JapFase1/home.html
+++ b/JapFase1/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0049)https://getbootstrap.com/docs/4.3/examples/album/ -->
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
   <!--Font-awesome para que aparwzcan los iconos-->
@@ -18,15 +18,18 @@
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
-  <link rel="stylesheet" href="sweetalert2.min.css">
 </head>
 
 <body>
+  <!--<div class="theme-switch-wrapper">
+    <label class="theme-switch" for="checkbok">
+      <input type="checkbox" id="checkbox" />
+      <div class="slider round"></div>
+    </label>
+    <em>Switch Theme</em>
+  </div>-->
 
   <nav class="site-header sticky-top py-1 bg-dark">
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1 version=v12.0"
-      nonce="8wEHU41i">
-      </script>
     <div class="container   d-flex flex-column flex-md-row justify-content-between" id="move-content">
       <a class="py-2 d-none d-md-inline-block" href=""></a>
       <a class="py-2 d-none d-md-inline-block" href="home.html">Inicio</a>
@@ -56,7 +59,7 @@
     <div class="album py-5 bg-light">
       <div class="container">
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-4 shadow">
             <a href="categories.html" class="card mb-4 shadow-sm custom-card">
               <img class="bd-placeholder-img card-img-top" src="img/cat1.jpg" width="100%">
               <h3 class="m-3">Autos (122)</h3>
@@ -65,7 +68,7 @@
               </div>
             </a>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 shadow">
             <a href="categories.html" class="card mb-4 shadow-sm custom-card">
               <img class="bd-placeholder-img card-img-top" src="img/cat2.jpg" width="100%">
               <h3 class="m-3">Juguetes (354)</h3>
@@ -74,7 +77,7 @@
               </div>
             </a>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 shadow">
             <a href="categories.html" class="card mb-4 shadow-sm custom-card">
               <img class="bd-placeholder-img card-img-top" src="img/cat3.jpg" width="100%">
               <h3 class="m-3">Muebles (157)</h3>
@@ -83,7 +86,7 @@
               </div>
             </a>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 shadow">
             <a href="categories.html" class="card mb-4 shadow-sm custom-card">
               <img class="bd-placeholder-img card-img-top" src="img/cat4.jpg" width="100%">
               <h3 class="m-3">Herramientas (452)</h3>
@@ -92,7 +95,7 @@
               </div>
             </a>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 shadow">
             <a href="categories.html" class="card mb-4 shadow-sm custom-card">
               <img class="bd-placeholder-img card-img-top" src="img/cat5.jpg" width="100%">
               <h3 class="m-3">Computadoras (724)</h3>
@@ -101,7 +104,7 @@
               </div>
             </a>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 shadow">
             <a href="categories.html" class="card mb-4 shadow-sm custom-card">
               <img class="bd-placeholder-img card-img-top" src="img/cat6.jpg" width="100%">
               <h3 class="m-3">Vestimenta (841)</h3>
@@ -133,7 +136,7 @@
   <script src="js/init.js"></script>
   <script src="js/login.js"></script>
   <script src="js/cerrar.js"></script>
-  <script src="sweetalert2.all.min.js"></script>
+  
 </body>
 
 </html>
